<resources>
    <string name="app_name">IMG</string>
    <string name="taille">Taille</string>
    <string name="interpr_tation">Interprétation :</string>
    <string name="votre_img_est">Votre IMG est</string>
    <string name="poids">Poids</string>
    <string name="age">Age</string>
    <string name="calculer">Calculer IMG</string>
    <string name="femme">Femme</string>
    <string name="homme">Homme</string>
</resources>